Improve local flow logic